src/compiletest/lcell-10.stderr
error[E0505]: cannot move out of `owner` because it is borrowed
  --> $DIR/lcell-10.rs:9:26
   |
8  |         let val_ref = owner.ro(&cell);
   |                       ----- borrow of `owner` occurs here
9  |         crossbeam::scope(move |s| {
   |                          ^^^^^^^^ move out of `owner` occurs here
10 |             s.spawn(move |_| assert_eq!(*owner.ro(&cell), 100)).join().unwrap(); // Compile fail
   |                                          ----- move occurs due to use in closure
11 |         }).unwrap();
12 |         assert_eq!(*val_ref, 100);
   |         -------------------------- borrow later used here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0505]: cannot move out of `cell` because it is borrowed
  --> $DIR/lcell-10.rs:9:26
   |
8  |         let val_ref = owner.ro(&cell);
   |                                ----- borrow of `cell` occurs here
9  |         crossbeam::scope(move |s| {
   |                          ^^^^^^^^ move out of `cell` occurs here
10 |             s.spawn(move |_| assert_eq!(*owner.ro(&cell), 100)).join().unwrap(); // Compile fail
   |                                                    ---- move occurs due to use in closure
11 |         }).unwrap();
12 |         assert_eq!(*val_ref, 100);
   |         -------------------------- borrow later used here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
